--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VideoPlayerUsingExoPlayer">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name="com.azhar.videoplayerusingexoplayer.View.Activity.MainActivity"
             android:exported="true"
             android:screenOrientation="locked">
             <intent-filter>
